# ian-is-online

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
application/backend/: constants.py  main.py  utilities.py  wsgi.py
application/backend/routes/: api.py
application/frontend/: package-lock.json  package.json
application/frontend-chakra/: package.json
application/frontend-chakra/public/: index.html
application/frontend-chakra/public/content/: Experience.json  Experience.md  OtherProjects.md  Profile.md
application/frontend-chakra/src/: App.css
application/frontend-chakra/src/components/: About.js  Contact.js  Experience.js  ExperienceArray.js  Footer.js  Hero.js  NavBar.js  Projects.js
application/frontend-legacy/: package-lock.json  package.json
application/frontend-legacy/public/: index.html
application/frontend-legacy/src/: App-mobile.css  emailConfig.js  index.js
application/frontend-legacy/src/components/: About.js  App.js  Engineering.js  Footer.js  Landing.js
application/frontend/public/: index.html  manifest.json
application/frontend/public/content/: Experience.json  Experience.md  OtherProjects.md  Profile.md  Projects.md
application/frontend/src/: App-mobile.css  App.css  App.js  emailConfig.js  getEmailConfig.js  index.css  index.js
application/frontend/src/components/: About.js  App.js  Contact.js  ContactForm.js  (+7 more)
deploy/: Dockerfile  Dockerfile.backend  branch_changes.sh  cloudbuild.yaml  copy_files_to_vm.sh  install_docker_on_vm.sh  nginx.conf
infra/: backend.tf  cloud_run.tf  main.tf  variables.tf
